--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *
 {
 	margin: 0;
-	font-family: "Arial:", sans-serif;
+	font-family: "Proxima:", sans-serif;
 
 }
 
@@ -10,11 +10,12 @@
 .name 
 {
 	font-size: 2em;
+	padding-left: 6%;
 }
 
 .ux 
 {
-	padding-left: 1%;
+	padding-left: 6%;
 	font-weight: normal;
 	font-size: 1em;
 }
@@ -28,7 +29,7 @@
 img.airbnb
 {
 	margin-top: 14%;
-	margin-left: 25%;
+	margin-left: 27%;
 	width: 60%;
 	height: auto; 
 }
@@ -36,7 +37,7 @@ img.airbnb
 img.bus
 {
 	margin-top: 2%;
-	margin-left: 25%;
+	margin-left: 27%;
 	width: 60%;
 	height: auto; 
 }
@@ -44,7 +45,7 @@ img.bus
 img.flat
 {
 	margin-top: 2%;
-	margin-left: 25%;
+	margin-left: 27%;
 	margin-bottom: 5%;
 	width: 60%;
 	height: auto; 
@@ -53,7 +54,7 @@ img.flat
 img.habits
 {
 	margin-top: 2%;
-	margin-left: 25%;
+	margin-left: 27%;
 	width: 60%;
 	height: auto; 
 }
@@ -64,24 +65,25 @@ img.habits
 											/*  ABOUT PAGE */
 .erin
 {
-	font-family: "Roboto:", sans-serif;
+	font-family: "Proxima:", sans-serif;
 	padding-top: 14%;
 	padding-left: 55%;
 }
 
 .about 
 {
-	font-family: "Roboto:", sans-serif;
+	font-family: "Proxima:", sans-serif;
 	font-weight: normal;
 	font-style: normal;
 	padding-left: 55%;
 	padding-right: 10%;
-	font-size: 0.87em;
+	font-size: 1em;
+	line-height: 1.25em;
 	font-color: grey;
 }
 .insta
 {
-	font-family: "Roboto:", sans-serif;
+	font-family: "Proxima:", sans-serif;
 	font-weight: normal;
 	font-style: normal;
 	padding-left: 55%;
@@ -96,8 +98,8 @@ img.habits
 	position: fixed;
 	padding-bottom: 2%; 
 	padding-left: 50%;
-	font-family: "Roboto:", sans-serif;
-	font-size: 0.87em; 
+	font-family: "Proxima:", sans-serif;
+	font-size: 1em; 
 	font-color: solid #75afb3;
 } 
 
@@ -133,7 +135,7 @@ a:visited
 {
 	padding-left: 20%;
 	text-decoration: none;
-	font-family: "Roboto:", sans-serif;
+	font-family: "Proxima:", sans-serif;
 	font-size: 2em;
 	padding-top: 10%;
 }
@@ -142,7 +144,8 @@ a:visited
 {
 	text-decoration: none;
 	display: block;
-	font-size: 15px;
+	line-height: 1.5em;
+	font-size: 1em;
 	padding-left: 20%;
 	padding-right: 20%;
 	padding-top: 2%;
@@ -167,7 +170,8 @@ img.second
 .subtitle
 {
 	padding-left: 20%;
-	font-family: "Roboto:", sans-serif;
+	font-family: "Proxima:", sans-serif;
+	line-height: 1.25em;
 	display: block;
 	font-size: 1em; 
 	padding-top: 3%;
@@ -180,9 +184,10 @@ img.second
 	padding-right: 20%;
 	padding-top: 2%;
 	text-decoration: none;
-	font-family: "Roboto:", sans-serif;
+	font-family: "Proxima:", sans-serif;
 	display: block;
-	font-size: 0.87em; 
+	font-size: 1em; 
+	line-height: 1.25em;
 	padding-bottom: 2%;
 }
 
@@ -191,9 +196,10 @@ img.second
 	padding-left: 25%;
 	padding-right: 20%;
 	text-decoration: none;
-	font-family: "Roboto:", sans-serif;
+	font-family: "Proxima:", sans-serif;
+	line-height: 1.25em;
 	display: block;
-	font-size: 0.87em; 
+	font-size: 1em; 
 
 }
 
